workspace-sf/force-app/main/default/objects/Questionario__c/Questionario__c.object-meta.xml
<CustomObject>
    <description>Objeto para armazenar o cadastro dos questionários</description>
    <label>Questionário de Risco</label>
    <nameField>
        <label>Nome</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Questionário de Risco</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>