workspace-sf/force-app/main/default/objects/Questionario__c/fields/Codigo__c.field-meta.xml
<CustomField>
    <fullName>Codigo__c</fullName>
    <externalId>true</externalId>
    <label>Código</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>