workspace-sf/force-app/main/default/objects/Questionario__c/fields/Prestadora__c.field-meta.xml
<CustomField>
    <fullName>Prestadora__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prestadora</label>
    <referenceTo>Parceiro__c</referenceTo>
    <relationshipLabel>Questionários de Risco</relationshipLabel>
    <relationshipName>QuestionariosRisco</relationshipName>
    <type>Lookup</type>
</CustomField>