workspace-sf/force-app/main/default/objects/Questionario__c/fields/PrestadoraGarantia__c.field-meta.xml
<CustomField>
    <fullName>PrestadoraGarantia__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prestadora da Garantia</label>
    <referenceTo>PrestadoraGarantia__c</referenceTo>
    <relationshipLabel>Questionários de Risco</relationshipLabel>
    <relationshipName>QuestionariosRisco_del</relationshipName>
    <type>Lookup</type>
</CustomField>