workspace-sf/force-app/main/default/objects/Questionario__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>Tipo de Questionário</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Completo</fullName>
            </value>
            <value>
                <fullName>Simplificado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>