workspace-sf/force-app/main/default/objects/Questionario__c/validationRules/ValidarEdicaoQuestionario.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarEdicaoQuestionario</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    NOT(ISPICKVAL(Status__c, &apos;Em manutenção&apos;)),
    NOT(ISCHANGED(Status__c))
)</errorConditionFormula>
    <errorMessage>Os questionário somente poderão ser editados em manutenção</errorMessage>
</ValidationRule>